# processes-outputs-gtest

./: .gitignore  CMakeLists.txt  README.md  a1.yml  github.yml  out2.txt  testcase.py
tests/: test.cpp
